# robotcurses-api

./: .gitignore  README.md  base.resource  log.html  output.xml  pyproject.toml  report.html  usuarios.robot
.github/workflows/: execute_test.yml
resources/connections/: app_conn.yml  session.resource
resources/contracts/: carrinho.py
resources/data/: faker_data.py
resources/routes/serverest/carrinho/: delete_carrinho.resource  post_carrinho.resource
resources/routes/serverest/login/: login.resource
resources/routes/serverest/produtos/: delete_produtos.resource  get_produtos_id.resource  post_produtos.resource
resources/routes/serverest/usuarios/: delete_usuarios.resource  get_usuarios_id.resource  post_usuarios.resource
resources/utils/: utils.resource
results/: log.html  output.xml  report.html
tests/: carrinhos.robot  produtos.robot  usuarios.robot
